Update to jdk19